<resources>
    <string name="app_name">Graphing Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="star">*</string>
    <string name="slash">/</string>
    <string name="open_par">(</string>
    <string name="close_par">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ce">CE</string>
    <string name="dot">.</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="graph">Graph</string>
    <string name="f">f</string>
    <string name="pow">^</string>
    <string name="calc">Calc</string>
    <string name="cant_cal_function">Cannot calculate a function</string>
    <string name="alert">Alert</string>
    <string name="invalid_expression">Expression is invalid</string>
    <string name="ok">Ok</string>
    <string name="comma">,</string>
    <string name="cant_graph_expression">Cannot graph an expression. Graph only accepts functions</string>
    <string name="calculator">Calculator</string>
    <string name="wrong_function_format">To graph a function put it in this format:\nf(x)=2*x</string>
    <string name="cant_graph_3d">Cannot graph 3 deminsional functions.</string>
    <string name="invalid_input">Invalid input. Input needs to be something like:\nf(x)=2*x</string>
</resources>